--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,4 +6,37 @@ theme:
   language: en
   logo: images/favicon.png
   favicon: images/favicon.png
+  features:  #导航
+      - navigation.instant  #即时加载
+      - navigation.tracking  #锚点跟踪
+      - navigation.tabs  #导航选项卡
+      - navigation.tabs.sticky  #粘性导航选项卡
+      - navigation.sections  #次级目录在侧边栏中呈现为组，与tabs同存则有2级导航
+  #    - navigation.expand  #左侧边栏全展开，取消则折叠其他只展开当选
+      - navigation.indexes  #次级索引页，直接将文档附加到章节，提供概览页面，在相应文件夹中创建index.md添加到导航nav开头。不兼容toc.integrate。
+      - toc.follow   #锚跟随，文章小标题目录侧边栏自动滚动，以便活动锚点始终可见（付费功能）
+  #    - toc.integrate  #导航集成，文章小标题目录是左侧边栏的一部分
+      - navigation.top  #返回顶端
+      - search.suggest  #搜索建议，省略回车
+      - search.highlight  #搜索词高亮突出显示
+      - search.share   #搜索共享
+      - header.autohide  #标题自动隐藏
+      - announce.dismiss  #标记为已读（付费功能）
+  palette:     #切换昼夜模式的颜色，审美差就用默认，专业点就自定义
+      - media: "(prefers-color-scheme: light)" 
+        scheme: default  #配色方案：浅色模式
+        primary: indigo  #原色，默认蓝，用于标题、侧边栏、文本链接和其他几个组件
+        accent: indigo  #强调色，默认蓝，可以交互的元素如悬停链接、按钮和滚动条
+        toggle:
+          icon: material/weather-sunny #图标，太阳
+          name: Switch to dark mode
+      - media: "(prefers-color-scheme: dark)"  
+        scheme: slate  #配色方案：深色模式
+        toggle:
+          icon: material/weather-night  #图标，月亮
+          name: Switch to light mode
+  font:  #字体，false 则阻止从Google加载字体
+    # 内置隐私插件自动下载和自托管 Web 字体文件，无需阻止。其他字体使用附加样式表 extra.css 。
+      text: Roboto  #常规字体，默认Roboto，正文、标题等，300、400、400i和700
+      code: Roboto Mono  #等宽字体，默认Roboto Mono，代码块，400
   
