--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,20 @@ site_description: A wiki for Rambo's notes
 site_url: https://rambo55555.github.io/wiki/
 theme:
   name: material
+  icon:
+    admonition:
+      note: octicons/tag-16
+      abstract: octicons/checklist-16
+      info: octicons/info-16
+      tip: octicons/squirrel-16
+      success: octicons/check-16
+      question: octicons/question-16
+      warning: octicons/alert-16
+      failure: octicons/x-circle-16
+      danger: octicons/zap-16
+      bug: octicons/bug-16
+      example: octicons/beaker-16
+      quote: octicons/quote-16
   language: en
   logo: images/favicon.png
   favicon: images/favicon.png
@@ -12,21 +26,21 @@ theme:
       - navigation.tabs  #导航选项卡
       - navigation.tabs.sticky  #粘性导航选项卡
       - navigation.sections  #次级目录在侧边栏中呈现为组，与tabs同存则有2级导航
-  #    - navigation.expand  #左侧边栏全展开，取消则折叠其他只展开当选
-      - navigation.indexes  #次级索引页，直接将文档附加到章节，提供概览页面，在相应文件夹中创建index.md添加到导航nav开头。不兼容toc.integrate。
-      - toc.follow   #锚跟随，文章小标题目录侧边栏自动滚动，以便活动锚点始终可见（付费功能）
-  #    - toc.integrate  #导航集成，文章小标题目录是左侧边栏的一部分
-      - navigation.top  #返回顶端
-      - search.suggest  #搜索建议，省略回车
-      - search.highlight  #搜索词高亮突出显示
-      - search.share   #搜索共享
-      - header.autohide  #标题自动隐藏
-      - announce.dismiss  #标记为已读（付费功能）
+      - navigation.expand  #左侧边栏全展开，取消则折叠其他只展开当选
+  #     - navigation.indexes  #次级索引页，直接将文档附加到章节，提供概览页面，在相应文件夹中创建index.md添加到导航nav开头。不兼容toc.integrate。
+  #     - toc.follow   #锚跟随，文章小标题目录侧边栏自动滚动，以便活动锚点始终可见（付费功能）
+  # #    - toc.integrate  #导航集成，文章小标题目录是左侧边栏的一部分
+  #     - navigation.top  #返回顶端
+  #     - search.suggest  #搜索建议，省略回车
+  #     - search.highlight  #搜索词高亮突出显示
+  #     - search.share   #搜索共享
+  #     - header.autohide  #标题自动隐藏
+  #     - announce.dismiss  #标记为已读（付费功能）
   palette:     #切换昼夜模式的颜色，审美差就用默认，专业点就自定义
       - media: "(prefers-color-scheme: light)" 
         scheme: default  #配色方案：浅色模式
-        primary: indigo  #原色，默认蓝，用于标题、侧边栏、文本链接和其他几个组件
-        accent: indigo  #强调色，默认蓝，可以交互的元素如悬停链接、按钮和滚动条
+        primary: blue  #原色，默认蓝，用于标题、侧边栏、文本链接和其他几个组件
+        accent: blue  #强调色，默认蓝，可以交互的元素如悬停链接、按钮和滚动条
         toggle:
           icon: material/weather-sunny #图标，太阳
           name: Switch to dark mode
@@ -39,4 +53,81 @@ theme:
     # 内置隐私插件自动下载和自托管 Web 字体文件，无需阻止。其他字体使用附加样式表 extra.css 。
       text: Roboto  #常规字体，默认Roboto，正文、标题等，300、400、400i和700
       code: Roboto Mono  #等宽字体，默认Roboto Mono，代码块，400
+markdown_extensions:  #推荐配置Markdown基本语法及其扩展
+  - abbr #缩写或名词
+  - pymdownx.snippets  #片段，将任意文件或部分内容嵌入到文档中  
+  - admonition  #警告或标注
+  - pymdownx.details  #细节折叠
+  - pymdownx.superfences  #超级围栏
+  - attr_list   #属性列表（按钮-颜色图标）
+  - def_list   #定义列表
+  - footnotes  #行内脚注
+  - md_in_html  #HTML 中的 Markdown
+  - toc:  #目录
+      toc_depth: 3 #目录深度，默认6，0则隐藏
+#      title: On this page  #默认值，自动获取
+#      permalink: true   #每个标题的末尾添加段落符号锚链接，默认false
+#      permalink: ⚓︎  #每个标题的末尾添加自定义符号锚链接
+#      permalink_title: Anchor link to this section for reference #在悬停时显示并由屏幕阅读器阅读的锚链接的标题
+  - tables #表格（未推荐）
+  - pymdownx.arithmatex:  #数学公式
+      generic: true  
+  - pymdownx.betterem:   #粗体斜体
+      smart_enable: all
+  - pymdownx.caret  #插入角标符号(`^`)
+  - pymdownx.mark  #双等号(`==`)
+  - pymdownx.tilde  #波浪号(`~`)
+#  - pymdownx.critic:  #评论家(突出显示建议更改)，未推荐
+#      mode: reject #应如何解析标记，默认view查看更改，accept是接受更改，reject是拒绝更改
+  - pymdownx.keys   #键盘键和组合  
+  - pymdownx.highlight  #代码高亮，对代码块（SuperFences）和行内代码块（InlineHilite）的语法突出显示
+  - pymdownx.inlinehilite  #行内高亮
+  - pymdownx.smartsymbols  #智能符号
+  - pymdownx.tabbed:  #内容选项卡
+      alternate_style: true  #启用内容选项卡替代样式，必须开启
+  - pymdownx.tasklist:  #任务列表
+      custom_checkbox: true   #切换复选框的呈现样式，将原生复选框样式替换为漂亮的图标
+#      clickable_checkbox: true  #切换复选框是否可点击，默认false，不建议开
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+
+plugins:  #插件
+  - tags
+#  - tags:
+#      tags_file: tags.md  #指定应使用哪个文件来呈现标签索引，默认无
+#  - privacy  #内置隐私插件（付费功能）
+#      enabled: !ENV [PRIVACY, false] #默认值true，关闭且本地环境变量示例
+#      externals: bundle  #插件遇到外部资产时做什么。默认bundle，自动下载所有外部文件并调整所有引用，report将在构建期间发出警告消息
+#      externals_directory: assets/externals  #下载外部资产存储路径，通常不需要更改
+#  - social  #内置社交插件（付费功能），在社交媒体上共享项目文档链接时显示的图像
+  - search: #搜索
+#      lang:   #语言，自动产生最佳结果，不需要设置
+#        - en  #英语
+#        - ja  #日语
+      separator: '[\s\-\.]' #分隔符，空格、减号、点
+#      prebuild_index: true  #预构建索引，默认false，已经弃用该选项
+
+extra_javascript:
+  - javascripts/baidu-tongji.js  #百度统计
+  - javascripts/mathjax.js  #数学公式的JS
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
+extra:
+#  version: #版本控制
+#    provider: mike
+  homepage: https://github.com/Rambo55555/wiki  #通常logo链接到主页，这里可修改
+  social:  #页脚
+    - icon: fontawesome/brands/github   #社交链接
+      link: https://github.com/Rambo55555
+      name: squidfunk on Twitter  #一般自动提取
+    - icon: fontawesome/solid/paper-plane  #电子邮件
+      link: mailto:rambohhh@csu.edu.com
+#  generator: false  #删除通知“Made with Material for MkDocs”，一般不必
+#  analytics: #设置站点分析
+#    provider: google
+#    property: G-XXXXXXXXXX
   
